--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                   type="hidden"
                   name="subject"
                   id="dynamic-subject"
-                  value="New Growth Inquiry from %{name}"
+                  value="New Growth Inquiry from %{formName}"
                 />
 
                 <div class="row g-4">
