Adding more security

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                       id="f-name"
                       class="form-control"
                       placeholder="e.g. Alex Johnson"
+                      maxlength="100"
                       required
                     />
                   </div>
@@ -254,6 +255,7 @@
                       name="email"
                       id="f-email"
                       class="form-control"
+                      maxlength="150"
                       placeholder="alex@company.com"
                       required
                     />
@@ -268,6 +270,7 @@
                       id="f-msg"
                       class="form-control"
                       rows="5"
+                      maxlength="2000"
                       placeholder="Tell me about your project goals..."
                       required
                     ></textarea>
